--- a/aa-employee-travel-buddy/package.json
+++ b/aa-employee-travel-buddy/package.json
@@ -8,8 +8,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
     "three": "^0.160.1",
